<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
    </parent>

    <groupId>com.kaziabid.learn.wams</groupId>
    <artifactId>web-analytics-microservice</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <name>wev-analytics-microservice</name>
    <description>Base Project for the Wikipedia/Twitter Analytics Micro Service
        Application.</description>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <spring-cloud-version>4.1.3</spring-cloud-version>
        <kafka-avro-serializer-version>7.7.0</kafka-avro-serializer-version>
        <solr.version>9.6.1</solr.version>
        <springdoc-openapi.version>2.6.0</springdoc-openapi.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>

        <!--
        https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-config-server</artifactId>
                <version>${spring-cloud-version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-config</artifactId>
                <version>${spring-cloud-version}</version>
            </dependency>
            <dependency>
                <groupId>io.confluent</groupId>
                <artifactId>kafka-avro-serializer</artifactId>
                <version>${kafka-avro-serializer-version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.swagger</groupId>
                        <artifactId>swagger-annotations</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.swagger</groupId>
                        <artifactId>swagger-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.solr</groupId>
                <artifactId>solr-solrj</artifactId>
                <version>${solr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.solr</groupId>
                <artifactId>solr-solrj-zookeeper</artifactId>
                <version>${solr.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>common-libs</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>common-dto</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>config-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>common-config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>solr-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>kafka-producer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>kafka-consumer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>kafka-admin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>kafka-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>common-exceptions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>solr-query-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kaziabid.learn.wams</groupId>
                <artifactId>solr-indexer-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>


    <modules>
        <module>twitter-to-kafka-servcie</module>
        <module>wikipedia-to-kafka-service</module>
        <module>kafka</module>
        <module>common-config</module>
        <module>config-server</module>
        <module>kafka-to-elastic-service</module>
        <module>kafka-to-solr-service</module>
        <module>common-dto</module>
        <module>solr</module>
        <module>common-exceptions</module>
        <module>solr-query-service</module>
        <module>common-libs</module>
        <module>solr-query-web-client-service</module>
    </modules>


    <repositories>
        <repository>
            <id>confluent</id>
            <name>Confluent Repo</name>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>
</project>